# factorio-3d-mod

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
factorio_3d/: Cargo.toml
factorio_3d/src/: billboards.rs  camera.rs  capture.rs  lib.rs  offsets.rs  picking.rs  renderer.rs  settings.rs  sky.rs  symbols.rs  warp.rs
factorio_3d/src/hooks/: entities.rs  frame.rs  input.rs  mod.rs  rotation.rs  sprites.rs
factorio_3d_models/: Cargo.toml
factorio_3d_models/src/: camera.rs  entities.rs  gltf_model.rs  lib.rs  model_renderer.rs  models.rs  offsets.rs  picking.rs  renderer.rs  settings.rs  symbols.rs  tuning.rs  util.rs  warp.rs
factorio_3d_models/src/hooks/: daynight.rs  frame.rs  getters.rs  items.rs  machines.rs  mem.rs  mod.rs  player.rs  wires.rs
factorio_3d_models/src/shaders/: model_common.hlsl  model_ps.hlsl  model_vs.hlsl  sky_ps.hlsl  sky_vs.hlsl  warp_common.hlsl  warp_ps.hlsl  warp_vs.hlsl
injector/: Cargo.toml
injector/src/: main.rs
models/BLUEPRINTS/ground-system/: static.glb
models/ENTITIES/FOLIAGE/tree2/: static.glb  (+1 more)
models/ENTITIES/PLAYER/: idle.glb  mining.glb  running.glb  shoot-run.glb  shoot-stand.glb
player/: Firing Rifle.fbx  Idle.fbx  Run Forward.fbx  Running.fbx  Standing Melee Attack Downward.fbx
tools/: demangle.py  export_player.py  fix_solid_prims.py  frida_assembly_pointer.py  frida_backtrace.py  frida_debug.py  frida_dump.py  frida_dump_at.py  frida_hook.py  frida_scanstr.py  frida_spidertron.py  frida_vtable.py  patch_tree_alpha.py  pdb_explorer.py
tools/glb-viewer/: Cargo.toml
tools/glb-viewer/src/: main.rs
tools/pdb-explorer/: Cargo.toml
tools/pdb-explorer/src/: main.rs
(+156 files in other folders)
