[package]
name = "factorio_3d"
version = "0.2.0"
edition = "2024"
description = "3D camera mod for Factorio (injected DLL)"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
retour = { version = "0.4.0-alpha.4", features = ["static-detour"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
] }
log = "0.4"
env_logger = "0.11"
glam = "0.29"
pdb = "0.8"
anyhow = "1"
